--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 python = "^3.12"
 fastapi = {extras = ["all"], version = "^0.110.3"}
 uvicorn = "0.19.0"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+passlib = "^1.7.4"
+bcrypt = "^4.1.2"
+python-jose = "^3.3.0"
+cryptography = "^42.0.5"
+python-multipart = "^0.0.9"
 
 
 [build-system]
