--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,8 @@ fastapi = {extras = ["all"], version = "^0.110.3"}
 uvicorn = "0.19.0"
 passlib = "^1.7.4"
 bcrypt = "^4.1.2"
-python-jose = "^3.3.0"
-cryptography = "^42.0.5"
 python-multipart = "^0.0.9"
+pyjwt = "^2.8.0"
 
 
 [build-system]
